# test-monorepo-dvc

./: README.md  new-ml-project-generator.sh  requirements.txt
.github/workflows/: train_bird_or_forest_model.yaml
bird_or_forest/: .pre-commit-config.yaml  data.dvc  dvc.yaml  params.yaml  pyproject.toml
bird_or_forest/.dvc/: config
bird_or_forest/notebooks/: bird_or_forest.ipynb
bird_or_forest/reports/: confusion_matrix.json  metrics.json
bird_or_forest/src/stages/: data_load_train.py
shared/: pyproject.toml
shared/src/shared/: utils.py
