[project]
name = "bird-or-forest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc[s3]>=3.59.2",
    "dvclive>=3.48.2",
    "fastai>=2.8.2",
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pytest>=8.4.0",
    "python-box>=7.3.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torcheval>=0.0.7",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250516",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }
